# DisplayInfoWeather

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
Basic/: Convolutional_Basic.ipynb
main/: CMakeLists.txt  Kconfig.projbuild  displayinfoweather.c
main/inc/: http_client_app.h  http_client_task.h  http_server_app.h  http_server_task.h  oled_app.h  oled_task.h  wifi_app.h  wifi_task.h
main/src/: http_client_app.c  http_server_app.c  main.c  oled_app.c  wifi_app.c
main/task/: http_client_task.c  http_server_task.c  oled_task.c  wifi_task.c
